// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.std.monitoring.tracing;

option go_package = "namespacelabs.dev/foundation/std/monitoring/tracing";

message ExporterArgs {
    string name = 1;
}

message NoArgs {}
